	* Perl plugin loader has been rewritten (John Kelm, Google Summer
	  of Code)
	* New music messaging plugin (Christian Muise, Google Summer of Code)
	* gaim-remote has been superceded by new DBUS bindings within Gaim
	  (Piotr Zielinski, Google Summer of Code)
	* The functionality of the auto-reconnect plugin has been
	  moved into the Gaim core, and the plugin itself has been
	  removed.

	MSN Features:
	* Custom smiley receiving support (Irving Cordova & Francesco Fracassi)
	* Added support for sending (with the /nudge command) and receiving
	  "nudges" (Julien Cegarra, Martin Bayard)
	* Added an account action to open your Hotmail inbox from MSN

	Yahoo Features:
	* Stealth Settings have been implemented
	* Doodle is now supported (Andrew Dieffenbach, Google Summer of Code)
	* Buddies' requests to add you to their lists now prompt for
	  authorization
	* Account option to ignore chat and conference invitations (Peter
	  Lawler)
	* Added a /list command to bring up the room list (Peter Lawler)

	AIM/ICQ Features:
	* ICQ file transfer support with newer ICQ clients (Jonathan Clark,
	  Google Summer of Code)
	* Many overall improvements to OSCAR file transfers (Jonathan Clark,
	  Google Summer of Code)
	* Ability to set ICQ "require authorization" and "web aware"
	  setting (Ettore Simone)
	* ICQ encoding fix for offline buddies (Ilya Konstantinov)

	IRC Features:
	* SSL support for IRC connections (Daniel Atallah)
	* Show an error message when temporarily unable to join an IRC
	  channel or change your nick
	* Added /nickserv, /memoserv, /chanserv and /operserv
	  commands (Joao Luís Marques Pinto)

	Jabber Features:
	* Support for SRV lookups
	* Support for buddy icons
	* Jabber User Directory searching

	SILC Features:
	* Whiteboard support (Pekka Riikonen)
	* Sending/receiving images in IMs (Pekka Riikonen)
	* Cipher and HMAC selection support (Pekka Riikonen)
	* Buddy Icon support (Pekka Riikonen)

	Other Protocol Changes: